--- a/test-1.html
+++ b/test-1.html
@@ -525,11 +525,11 @@ gtag('config', 'G-H1JW8YBDZ8');
             <path d="M21.21 15.89A10 10 0 1 1 8 2.83"></path>
             <path d="M22 12A10 10 0 0 0 12 2v10z"></path>
           </svg>
-          LATEST TOURNAMENT RESULTS
+          UPCOMING ACTIVITY
         </h2>
       </div>
       <div style="margin-left: 25px; color: #64748b; font-size: 11px; font-weight: 700; letter-spacing: 0.3px; background: #f8fafc; padding: 4px 10px; border-radius: 4px; border: 1px solid #edf2f7; box-sizing: border-box; flex-shrink: 0;">
-        Last Updated: Feb 25, 2026
+        Last Updated: Feb 26, 2026
       </div>
     </div>
     <div style="width: 100%; height: 1px; background: #edf2f7; margin-top: 10px;"></div>
@@ -541,14 +541,14 @@ gtag('config', 'G-H1JW8YBDZ8');
       <div class="tournament-info" style="display: flex; align-items: center; gap: 12px; flex: 1; min-width: 250px;">
         <div style="display: flex; align-items: center; gap: 6px; background: #0c2340; padding: 6px 12px; border-radius: 6px;">
           <span class="status-dot-live"></span>
-          <span style="color: #ffffff; font-size: 10px; font-weight: 800; text-transform: uppercase;">FINAL</span>
+          <span style="color: #ffffff; font-size: 10px; font-weight: 800; text-transform: uppercase;">UPCOMING</span>
         </div>
         <div>
           <div style="display: flex; align-items: baseline; gap: 6px;">
-            <span style="color: #0c2340; font-weight: 900; font-size: 17px;">Military City Collegiate</span>
-            <span style="color: #94a3b8; font-size: 11px; font-weight: 700;">(Feb 23-24)</span>
+            <span style="color: #0c2340; font-weight: 900; font-size: 17px;">Golden Nugget Invitational</span>
+            <span style="color: #94a3b8; font-size: 11px; font-weight: 700;">(Mar 2-3)</span>
           </div>
-          <span style="color: #64748b; font-size: 12px; font-weight: 600;">San Antonio, Texas / TPC San Antonio - Canyons</span>
+          <span style="color: #64748b; font-size: 12px; font-weight: 600;">Lake Charles, LA / The CC At The Golden Nugget</span>
         </div>
       </div>
 
@@ -561,15 +561,15 @@ gtag('config', 'G-H1JW8YBDZ8');
           <div style="display: table-row;">
             <div style="display: table-cell; text-align: center;">
               <div style="display: flex; gap: 10px; justify-content: center;">
-                <span style="color: #e74c3c; font-size: 16px; font-weight: 900;">69</span>
-                <span style="color: #0047AB; font-size: 16px; font-weight: 900;">72</span>
-                <span style="color: #0c2340; font-size: 16px; font-weight: 900;">74</span>
+                <span style="color: #94a3b8; font-size: 16px; font-weight: 900;">-</span>
+                <span style="color: #94a3b8; font-size: 16px; font-weight: 900;">-</span>
+                <span style="color: #94a3b8; font-size: 16px; font-weight: 900;">-</span>
               </div>
             </div>
             <div style="display: table-cell; text-align: center;">
               <div style="display: flex; gap: 8px; justify-content: center;">
-                <span style="color: #e74c3c; font-size: 16px; font-weight: 900;">-1</span>
-                <span style="color: #0c2340; font-size: 16px; font-weight: 900;">(<span style="color: #e74c3c;">215</span>)</span>
+                <span style="color: #94a3b8; font-size: 16px; font-weight: 900;">-</span>
+                <span style="color: #94a3b8; font-size: 16px; font-weight: 900;">(<span style="color: #94a3b8;">-</span>)</span>
               </div>
             </div>
           </div>
@@ -577,7 +577,7 @@ gtag('config', 'G-H1JW8YBDZ8');
         
         <div class="rank-box" style="display: flex; flex-direction: column; align-items: center; gap: 2px; min-width: 45px;">
           <span style="color: #0C2340; font-size: 10px; font-weight: 800; letter-spacing: 0.5px;">POS</span>
-          <div style="color: #0c2340; font-size: 18px; font-weight: 900; line-height: 1;">1</div>
+          <div style="color: #94a3b8; font-size: 18px; font-weight: 900; line-height: 1;">-</div>
         </div>
 
         <a href="ncaa-stats.html#Tournament-Schedule-Scoring" style="text-decoration: none; display: flex; align-items: center; justify-content: center; padding: 5px;">
