--- a/test-1.html
+++ b/test-1.html
@@ -543,13 +543,13 @@ gtag('config', 'G-H1JW8YBDZ8');
           <span class="status-dot-live"></span>
           <span style="color: #ffffff; font-size: 10px; font-weight: 800; text-transform: uppercase;">UPCOMING</span>
         </div>
-        <div>
-          <div style="display: flex; align-items: baseline; gap: 6px;">
-            <span style="color: #0c2340; font-weight: 900; font-size: 17px;">Golden Nugget Invitational</span>
-            <span style="color: #94a3b8; font-size: 11px; font-weight: 700;">(Mar 2-3)</span>
-          </div>
-          <span style="color: #64748b; font-size: 12px; font-weight: 600;">Lake Charles, LA / The CC At The Golden Nugget</span>
-        </div>
+        <div style="display: flex; flex-direction: column; align-items: flex-start; gap: 4px;">
+            <div style="display: flex; align-items: baseline; gap: 6px;">
+          <span style="color: #0c2340; font-weight: 900; font-size: 17px; line-height: 1.2;">Golden Nugget Invitational</span>
+         <span style="color: #94a3b8; font-size: 11px; font-weight: 700;">(Mar 2-3)</span>
+       </div>
+         <span style="color: #64748b; font-size: 12px; font-weight: 600; line-height: 1.2; margin: 0; padding: 0;">Lake Charles, LA / The CC At The Golden Nugget</span>
+  </div>
       </div>
 
       <div class="stats-container" style="display: flex; align-items: center; gap: 20px; margin-left: auto;">
