--- a/test-1.html
+++ b/test-1.html
@@ -721,17 +721,17 @@
 
     <div style="text-align: right;">
       <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Total</span>
-      <span style="color: #e74c3c; font-size: 18px; font-weight: 900;">215</span>
+      <span style="color: #94a3b8; font-size: 18px; font-weight: 900;">-</span>
     </div>
 
     <div style="text-align: right;">
       <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Par</span>
-      <span style="color: #e74c3c; font-size: 18px; font-weight: 900;">-1</span>
+      <span style="color: #94a3b8; font-size: 18px; font-weight: 900;">-</span>
     </div>
 
     <div style="text-align: right;">
       <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">POS</span>
-      <span style="color: #ffffff; font-size: 18px; font-weight: 900;">1</span>
+      <span style="color: #ffffff; font-size: 18px; font-weight: 900;">-</span>
     </div>
 
   </div>
