--- a/test-1.html
+++ b/test-1.html
@@ -596,7 +596,7 @@
           <td class="col-left">
             <div style="display: flex; align-items: center; gap: 8px;">
               <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 1</div>
-              <div class="pairing-btn" onclick="openPairing('./images/freshman-2025-2026/') style="display: none;">
+              <div class="pairing-btn" onclick="openPairing(' ') style="display: none;">
                 <span>Pairing</span>
                 <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
                   <path d="M15 3h6v6"></path>
@@ -604,7 +604,7 @@
                   <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
                 </svg>
               </div>
-              <div class="pairing-btn" onclick="openPairing('./images/freshman-2025-2026/') style="display: none;">
+              <div class="pairing-btn" onclick="openPairing(' ') style="display: none;">
                 <span>Scorecard</span>
                 <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
                   <path d="M15 3h6v6"></path>
@@ -630,7 +630,7 @@
           <td class="col-left">
             <div style="display: flex; align-items: center; gap: 8px;">
               <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 2</div>
-              <div class="pairing-btn" onclick="openPairing('./images/freshman-2025-2026/') style="display: none;">
+              <div class="pairing-btn" onclick="openPairing(' ') style="display: none;">
                 <span>Pairing</span>
                 <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
                   <path d="M15 3h6v6"></path>
@@ -638,7 +638,7 @@
                   <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
                 </svg>
               </div>
-              <div class="pairing-btn" onclick="openPairing('./images/freshman-2025-2026/') style="display: none;">
+              <div class="pairing-btn" onclick="openPairing(' ') style="display: none;">
                 <span>Scorecard</span>
                 <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
                   <path d="M15 3h6v6"></path>
@@ -664,7 +664,7 @@
           <td class="col-left">
             <div style="display: flex; align-items: center; gap: 8px;">
               <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 3</div>
-              <div class="pairing-btn" onclick="openPairing('./images/freshman-2025-2026/') style="display: none;">
+              <div class="pairing-btn" onclick="openPairing(' ') style="display: none;">
                 <span>Pairing</span>
                 <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
                   <path d="M15 3h6v6"></path>
@@ -672,7 +672,7 @@
                   <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
                 </svg>
               </div>
-              <div class="pairing-btn" onclick="openPairing('./images/freshman-2025-2026/') style="display: none;">
+              <div class="pairing-btn" onclick="openPairing(' ') style="display: none;">
                 <span>Scorecard</span>
                 <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
                   <path d="M15 3h6v6"></path>
