--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -391,7 +391,7 @@
   </h1>
   
   <span style="color: #64748b; font-size: 12px; font-weight: 700; letter-spacing: 0.5px; padding-bottom: 2px; white-space: nowrap;">
-    Last Updated: Feb 25, 2026
+    Last Updated: Feb 26, 2026
   </span>
 </div>
 
@@ -403,8 +403,8 @@
   <div style="margin-bottom: 5px; width: 100%; box-sizing: border-box; padding: 0;">
     
     <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 25px; border-left: 5px solid #ff4d4d; padding-left: 20px; margin-left: 0;">
-      <h3 style="color: #0c2340; margin: 0; text-transform: none; font-size: 1.3em; line-height: 1.2;">LATEST TOURNAMENT RESULTS</h3>
-      <span style="font-family: 'Montserrat', sans-serif; font-size: 0.85em; color: #888; padding-right: 0;">6th Event: Military City Collegiate | Home Field</span>
+      <h3 style="color: #0c2340; margin: 0; text-transform: none; font-size: 1.3em; line-height: 1.2;">UPCOMING TOURNAMENT</h3>
+      <span style="font-family: 'Montserrat', sans-serif; font-size: 0.85em; color: #888; padding-right: 0;">7th Event: Golden Nugget Invitational</span>
     </div>
   </div>
 </div>
@@ -570,11 +570,11 @@
     <div style="display: flex; align-items: center; gap: 12px;">
       <div style="background: #0c2340; color: white; padding: 4px 12px; border-radius: 4px; font-size: 10px; font-weight: 900; letter-spacing: 1px; display: flex; align-items: center; gap: 8px;">
         <span class="live-dot"></span>
-        FINAL
+        UPCOMING
       </div>
       <div>
-        <h2 style="color: #0c2340; margin: 0; font-size: 19px; font-weight: 800;">Military City Collegiate (UTSA) | Feb 23-24</h2>
-        <div style="font-size: 12px; color: #7f8c8d; font-weight: 600;">TPC San Antonio | The Canyons Course | Par 72 | 7,106 Yards | Rating: 74.5 | Slope: 139</div>
+        <h2 style="color: #0c2340; margin: 0; font-size: 19px; font-weight: 800;">Golden Nugget Invitational (LAMAR) | Mar 2-3</h2>
+        <div style="font-size: 12px; color: #7f8c8d; font-weight: 600;">The CC At The Golden Nugget | Lake Charles, LA | Par 72 | 6,940 Yards | Rating: 73 | Slope: 137</div>
       </div>
     </div> 
   </div>
@@ -596,7 +596,7 @@
           <td class="col-left">
             <div style="display: flex; align-items: center; gap: 8px;">
               <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 1</div>
-              <div class="pairing-btn" onclick="openPairing('./images/freshman-2025-2026/joshua-hong-UTSA-Military-City-R1-pairing.jpg')">
+               <div class="pairing-btn" onclick="openPairing(' ')" style="display: none;">
                 <span>Pairing</span>
                 <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
                   <path d="M15 3h6v6"></path>
@@ -604,7 +604,7 @@
                   <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
                 </svg>
               </div>
-              <div class="pairing-btn" onclick="openPairing('./images/freshman-2025-2026/joshua-hong-UTSA-Military-City-Scorecard.jpg')">
+              <div class="pairing-btn" onclick="openPairing(' ')" style="display: none;">
                 <span>Scorecard</span>
                 <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
                   <path d="M15 3h6v6"></path>
@@ -615,22 +615,22 @@
             </div>
             <div style="font-size: 11px; color: #7f8c8d;">Feb 23, 2026</div>
             <div class="mobile-status-bar">
-              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold; color: #e74c3c;">69</span></div>
-              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold; color: #e74c3c;">-3</span></div>
-              <div class="ms-item"><span class="ms-label">POS</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">1</span></div>
+              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold; color: #94a3b8;">-</span></div>
+              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold; color: #94a3b8;">-</span></div>
+              <div class="ms-item"><span class="ms-label">POS</span><span class="ms-value" style="font-weight: bold; color: #94a3b8;">-</span></div>
             </div>
           </td>
-          <td class="hide-mobile" style="font-weight: bold; color: #e74c3c;">69</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #e74c3c;">-3</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">Final</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">1</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">-</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">-</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">-</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">-</td>
         </tr>
 
       <tr>
           <td class="col-left">
             <div style="display: flex; align-items: center; gap: 8px;">
               <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 2</div>
-              <div class="pairing-btn" onclick="openPairing('./images/freshman-2025-2026/joshua-hong-UTSA-Military-City-R2-pairing.jpg')">
+               <div class="pairing-btn" onclick="openPairing(' ')" style="display: none;">
                 <span>Pairing</span>
                 <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
                   <path d="M15 3h6v6"></path>
@@ -638,7 +638,7 @@
                   <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
                 </svg>
               </div>
-              <div class="pairing-btn" onclick="openPairing('./images/freshman-2025-2026/joshua-hong-UTSA-Military-City-Scorecard.jpg')">
+               <div class="pairing-btn" onclick="openPairing(' ')" style="display: none;">
                 <span>Scorecard</span>
                 <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
                   <path d="M15 3h6v6"></path>
@@ -649,22 +649,22 @@
             </div>
             <div style="font-size: 11px; color: #7f8c8d; margin-top: 2px;">Feb 23, 2026</div>
             <div class="mobile-status-bar">
-              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold; color: #0047AB;">72</span></div>
-              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold; color: #0047AB;">E</span></div>
-              <div class="ms-item"><span class="ms-label">POS</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">2</span></div>
+              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold; color: #94a3b8;">-</span></div>
+              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold; color: #94a3b8;">-</span></div>
+              <div class="ms-item"><span class="ms-label">POS</span><span class="ms-value" style="font-weight: bold; color: #94a3b8;">-</span></div>
             </div>
           </td>
-          <td class="hide-mobile" style="font-weight: bold; color: #0047AB;">72</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #0047AB;">E</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">Final</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">2</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">-</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">-</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">-</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">-</td>
         </tr>
 
         <tr>
           <td class="col-left">
             <div style="display: flex; align-items: center; gap: 8px;">
               <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 3</div>
-              <div class="pairing-btn" onclick="openPairing('./images/freshman-2025-2026/joshua-hong-UTSA-Military-City-R1-pairing.jpg')">
+               <div class="pairing-btn" onclick="openPairing(' ')" style="display: none;">
                 <span>Pairing</span>
                 <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
                   <path d="M15 3h6v6"></path>
@@ -672,7 +672,7 @@
                   <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
                 </svg>
               </div>
-              <div class="pairing-btn" onclick="openPairing('./images/freshman-2025-2026/joshua-hong-UTSA-Military-City-Scorecard.jpg');">
+               <div class="pairing-btn" onclick="openPairing(' ')" style="display: none;">
                 <span>Scorecard</span>
                 <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
                   <path d="M15 3h6v6"></path>
@@ -683,15 +683,15 @@
             </div>
             <div style="font-size: 11px; color: #7f8c8d;">Feb 24, 2026</div>
             <div class="mobile-status-bar">
-              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">74</span></div>
-              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">+2</span></div>
-              <div class="ms-item"><span class="ms-label">POS</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">1</span></div>
+              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold; color: #94a3b8;">-/span></div>
+              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold; color: #94a3b8;">-</span></div>
+              <div class="ms-item"><span class="ms-label">POS</span><span class="ms-value" style="font-weight: bold; color: #94a3b8;">-</span></div>
             </div>
           </td>
-          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">74</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">+2</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">Final</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">1</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">-</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">-</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">-</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">-</td>
         </tr>
       </tbody>
     </table>
@@ -703,7 +703,7 @@
    padding: 5px 12px; border-radius: 6px; transition: all 0.2s ease; background: #ffffff;">
   <span style="display: flex; align-items: center; gap: 6px;">
     <span style="width: 5px; height: 5px; background-color: #ff4d4d; border-radius: 50%; display: inline-block; animation: pulse 1.5s infinite;"></span>
-    FINAL RESULTS
+    LIVE LEADERBOARD
   </span>
   <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="#ff4d4d" stroke-width="3.5" stroke-linecap="round" stroke-linejoin="round">
     <line x1="7" y1="17" x2="17" y2="7"></line>
@@ -721,17 +721,17 @@
 
     <div style="text-align: right;">
       <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Total</span>
-      <span style="color: #e74c3c; font-size: 18px; font-weight: 900;">215</span>
+      <span style="color: #94a3b8; font-size: 18px; font-weight: 900;">-</span>
     </div>
 
     <div style="text-align: right;">
       <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Par</span>
-      <span style="color: #e74c3c; font-size: 18px; font-weight: 900;">-1</span>
+      <span style="color: #94a3b8; font-size: 18px; font-weight: 900;">-</span>
     </div>
 
     <div style="text-align: right;">
       <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">POS</span>
-      <span style="color: #ffffff; font-size: 18px; font-weight: 900;">1</span>
+      <span style="color: #ffffff; font-size: 18px; font-weight: 900;">-</span>
     </div>
 
   </div>
