--- a/code/index-upcoming-ready.html
+++ b/code/index-upcoming-ready.html
@@ -873,13 +873,26 @@ gtag('config', 'G-H1JW8YBDZ8');
 <script>
 async function updateMetrics() {
   try {
-    const response = await fetch('data.json');
+    const response = await fetch('data.json?v=' + new Date().getTime());
     const data = await response.json();
 
     // Individual Metrics
     document.getElementById('sync-scoringAvg').innerText = data.individual.scoringAvg;
     document.getElementById('sync-rawAvg').innerText = data.individual.rawAvg;
-    document.getElementById('sync-underPar').innerText = data.individual.underPar;
+    
+    // sync-underPar 처리: 괄호 부분만 작게 만들기 위해 innerHTML을 사용합니다.
+    const underParEl = document.getElementById('sync-underPar');
+    if (underParEl) {
+        const text = data.individual.underPar; // 예: "11 Par or Better(61.1%)"
+        if (text.includes('(')) {
+            const parts = text.split('(');
+            // 앞부분은 그대로, 괄호부터는 0.8em 크기로 줄여서 출력 (스타일 유지)
+            underParEl.innerHTML = `${parts[0]}<span style="font-size: 0.8em; font-weight: normal; opacity: 0.8;">(${parts[1]}</span>`;
+        } else {
+            underParEl.innerText = text;
+        }
+    }
+    
     document.getElementById('sync-gpa').innerText = data.individual.gpa;
 
     // Team Metrics
