--- a/news-media.html
+++ b/news-media.html
@@ -320,7 +320,7 @@
 <div style="margin-bottom: 50px;">
   <h3 style="color: #0c2340; font-size: 17px; margin-bottom: 20px; display: flex; align-items: center; font-weight: 600;">
     <span style="display:inline-block; width:6px; height:6px; background-color:#0c2340; border-radius:50%; margin-right:10px;"></span>
-    Competitive Record & Media
+    Official Media & Coverage
   </h3>
   
   <div style="display: flex; gap: 20px; flex-wrap: wrap;">
@@ -334,7 +334,7 @@
           <div style="padding: 25px; flex-grow: 1; display: flex; flex-direction: column; justify-content: space-between;">
             <div>
               <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px;">
-                <div style="font-size: 11px; color: #c98a2e; font-weight: bold; letter-spacing: 1px;">TOURNAMENT RECORD</div>
+                <div style="font-size: 11px; color: #c98a2e; font-weight: bold; letter-spacing: 1px;">Individual Champion</div>
                 <div style="font-size: 11px; color: #94a3b8; font-weight: 700;">Feb 25, 2026</div>
               </div>
               <div style="font-size: 19px; font-weight: 800; color: #0c2340; line-height: 1.3; margin-bottom: 12px;">
