--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -596,7 +596,7 @@
           <td class="col-left">
             <div style="display: flex; align-items: center; gap: 8px;">
               <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 1</div>
-               <div class="pairing-btn" onclick="openPairing(' ')" style="display: none;">
+               <div class="pairing-btn" onclick="openPairing('./images/freshman-2025-2026/joshua-hong-UTSA-Golden-Nugget-paring-1.jpg')">
                 <span>Pairing</span>
                 <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
                   <path d="M15 3h6v6"></path>
@@ -615,15 +615,15 @@
             </div>
             <div style="font-size: 11px; color: #7f8c8d;">Feb 23, 2026</div>
             <div class="mobile-status-bar">
-              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold; color: #94a3b8;">-</span></div>
-              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold; color: #94a3b8;">-</span></div>
-              <div class="ms-item"><span class="ms-label">POS</span><span class="ms-value" style="font-weight: bold; color: #94a3b8;">-</span></div>
+              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold; color: #94a3b8;">TBD</span></div>
+              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold; color: #94a3b8;">TBD</span></div>
+              <div class="ms-item"><span class="ms-label">POS</span><span class="ms-value" style="font-weight: bold; color: #94a3b8;">TBD</span></div>
             </div>
           </td>
-          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">-</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">-</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">-</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">-</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">TBD</td>
         </tr>
 
       <tr>
@@ -638,7 +638,7 @@
                   <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
                 </svg>
               </div>
-               <div class="pairing-btn" onclick="openPairing(' ')" style="display: none;">
+               <div class="pairing-btn" onclick="openPairing('./images/freshman-2025-2026/joshua-hong-UTSA-Golden-Nugget-paring-1.jpg')">
                 <span>Scorecard</span>
                 <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
                   <path d="M15 3h6v6"></path>
@@ -649,15 +649,15 @@
             </div>
             <div style="font-size: 11px; color: #7f8c8d; margin-top: 2px;">Feb 23, 2026</div>
             <div class="mobile-status-bar">
-              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold; color: #94a3b8;">-</span></div>
-              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold; color: #94a3b8;">-</span></div>
-              <div class="ms-item"><span class="ms-label">POS</span><span class="ms-value" style="font-weight: bold; color: #94a3b8;">-</span></div>
+              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold; color: #94a3b8;">TBD</span></div>
+              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold; color: #94a3b8;">TBD</span></div>
+              <div class="ms-item"><span class="ms-label">POS</span><span class="ms-value" style="font-weight: bold; color: #94a3b8;">TBD</span></div>
             </div>
           </td>
-          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">-</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">-</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">-</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">-</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">TBD</td>
         </tr>
 
         <tr>
