--- a/code/ncaa-up-coming-ready.html
+++ b/code/ncaa-up-coming-ready.html
@@ -596,7 +596,7 @@
           <td class="col-left">
             <div style="display: flex; align-items: center; gap: 8px;">
               <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 1</div>
-               <div class="pairing-btn" onclick="openPairing(' ')" style="display: none;">
+               <div class="pairing-btn" onclick="openPairing('./images/freshman-2025-2026/joshua-hong-UTSA-Golden-Nugget-paring-1.jpg')">
                 <span>Pairing</span>
                 <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
                   <path d="M15 3h6v6"></path>
@@ -615,22 +615,22 @@
             </div>
             <div style="font-size: 11px; color: #7f8c8d;">Feb 23, 2026</div>
             <div class="mobile-status-bar">
-              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold; color: #94a3b8;">-</span></div>
-              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold; color: #94a3b8;">-</span></div>
-              <div class="ms-item"><span class="ms-label">POS</span><span class="ms-value" style="font-weight: bold; color: #94a3b8;">-</span></div>
+              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold; color: #94a3b8;">TBD</span></div>
+              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold; color: #94a3b8;">TBD</span></div>
+              <div class="ms-item"><span class="ms-label">POS</span><span class="ms-value" style="font-weight: bold; color: #94a3b8;">TBD</span></div>
             </div>
           </td>
-          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">-</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">-</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">-</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">-</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">TBD</td>
         </tr>
 
       <tr>
           <td class="col-left">
             <div style="display: flex; align-items: center; gap: 8px;">
               <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 2</div>
-               <div class="pairing-btn" onclick="openPairing(' ')" style="display: none;">
+               <div class="pairing-btn" onclick="openPairing('./images/freshman-2025-2026/joshua-hong-UTSA-Golden-Nugget-paring-1.jpg')">
                 <span>Pairing</span>
                 <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
                   <path d="M15 3h6v6"></path>
@@ -638,7 +638,7 @@
                   <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
                 </svg>
               </div>
-               <div class="pairing-btn" onclick="openPairing(' ')" style="display: none;">
+               <div class="pairing-btn" onclick="openPairing('')" style="display: none;">
                 <span>Scorecard</span>
                 <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
                   <path d="M15 3h6v6"></path>
@@ -649,15 +649,15 @@
             </div>
             <div style="font-size: 11px; color: #7f8c8d; margin-top: 2px;">Feb 23, 2026</div>
             <div class="mobile-status-bar">
-              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold; color: #94a3b8;">-</span></div>
-              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold; color: #94a3b8;">-</span></div>
-              <div class="ms-item"><span class="ms-label">POS</span><span class="ms-value" style="font-weight: bold; color: #94a3b8;">-</span></div>
+              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold; color: #94a3b8;">TBD</span></div>
+              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold; color: #94a3b8;">TBD</span></div>
+              <div class="ms-item"><span class="ms-label">POS</span><span class="ms-value" style="font-weight: bold; color: #94a3b8;">TBD</span></div>
             </div>
           </td>
-          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">-</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">-</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">-</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">-</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #94a3b8;">TBD</td>
         </tr>
 
         <tr>
@@ -1789,14 +1789,19 @@ async function updateMetrics() {
     document.getElementById('sync-scoringAvg').innerText = data.individual.scoringAvg;
     document.getElementById('sync-rawAvg').innerText = data.individual.rawAvg;
     
-    // sync-underPar 처리: 괄호 부분만 작게 만들기 위해 innerHTML을 사용합니다.
+    // sync-underPar 
     const underParEl = document.getElementById('sync-underPar');
     if (underParEl) {
         const text = data.individual.underPar; // 예: "11 Par or Better(61.1%)"
         if (text.includes('(')) {
             const parts = text.split('(');
-            // 앞부분은 그대로, 괄호부터는 0.8em 크기로 줄여서 출력 (스타일 유지)
-            underParEl.innerHTML = `${parts[0]}<span style="font-size: 0.8em; font-weight: normal; opacity: 0.8;">(${parts[1]}</span>`;
+            // display: block
+            underParEl.innerHTML = `
+                <div style="display: block; line-height: 1.2;">${parts[0]}</div>
+                <div style="display: block; font-size: 0.85em; font-weight: normal; opacity: 0.7; margin-top: 2px;">(${parts[1]}</div>
+            `;
+            
+            underParEl.style.textAlign = 'left';
         } else {
             underParEl.innerText = text;
         }
