--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -683,7 +683,7 @@
             </div>
             <div style="font-size: 11px; color: #7f8c8d;">Feb 24, 2026</div>
             <div class="mobile-status-bar">
-              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold; color: #94a3b8;">-/span></div>
+              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold; color: #94a3b8;">-</span></div>
               <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold; color: #94a3b8;">-</span></div>
               <div class="ms-item"><span class="ms-label">POS</span><span class="ms-value" style="font-weight: bold; color: #94a3b8;">-</span></div>
             </div>
