--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -403,7 +403,7 @@
   <div style="margin-bottom: 5px; width: 100%; box-sizing: border-box; padding: 0;">
     
     <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 25px; border-left: 5px solid #ff4d4d; padding-left: 20px; margin-left: 0;">
-      <h3 style="color: #0c2340; margin: 0; text-transform: none; font-size: 1.3em; line-height: 1.2;">UPCOMING TOURNAMENT</h3>
+      <h3 style="color: #10b981; margin: 0; text-transform: none; font-size: 1.3em; line-height: 1.2;">ONGOING TOURNAMENT</h3>
       <span style="font-family: 'Montserrat', sans-serif; font-size: 0.85em; color: #888; padding-right: 0;">7th Event: Golden Nugget Invitational</span>
     </div>
   </div>
@@ -444,7 +444,7 @@
     .live-dot {
       width: 6px;
       height: 6px;
-      background-color: #ff4d4d;
+      background-color: #10b981;
       border-radius: 50%;
       display: inline-block;
       animation: live-pulse 2s infinite ease-in-out;
@@ -570,7 +570,7 @@
     <div style="display: flex; align-items: center; gap: 12px;">
       <div style="background: #0c2340; color: white; padding: 4px 12px; border-radius: 4px; font-size: 10px; font-weight: 900; letter-spacing: 1px; display: flex; align-items: center; gap: 8px;">
         <span class="live-dot"></span>
-        UPCOMING
+        ONGOING
       </div>
       <div>
         <h2 style="color: #0c2340; margin: 0; font-size: 19px; font-weight: 800;">Golden Nugget Invitational (LAMAR) | Mar 2-3</h2>
@@ -705,7 +705,7 @@
     <span style="width: 5px; height: 5px; background-color: #ff4d4d; border-radius: 50%; display: inline-block; animation: pulse 1.5s infinite;"></span>
     LIVE LEADERBOARD
   </span>
-  <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="#ff4d4d" stroke-width="3.5" stroke-linecap="round" stroke-linejoin="round">
+  <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="#10b981" stroke-width="3.5" stroke-linecap="round" stroke-linejoin="round">
     <line x1="7" y1="17" x2="17" y2="7"></line>
     <polyline points="7 7 17 7 17 17"></polyline>
   </svg>
